--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3
 zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier", tag = "v0.2.9"}
 
 [dev-dependencies]
+lazy_static = "1.4"
 # serde_json = "1.0"
 # rand = "0.7"
