--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ crate-type = ["lib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.2.1"
-# multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa.git" }
+k256 = { version = "0", features = ["ecdsa"] }
+multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa", tag = "v0.4.3" } # for utilities::mta
 
 # baggage from multi-party-ecdsa
 curv = { git = "https://github.com/KZen-networks/curv", tag = "v0.2.6", features = ["ec_secp256k1"] }
@@ -18,5 +19,4 @@ paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3
 zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier", tag = "v0.2.9"}
 
 [dev-dependencies]
-# serde_json = "1.0"
-# rand = "0.7"
+lazy_static = "1.4"
