--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,4 +23,4 @@ jobs:
           override: true
 
       - name: Run cargo test
-        run: cargo test --all-features
+        run: cargo test --release --all-features
