chore(k256)!: migrate math library to k256 (#76)
* upgrade k256 dependency

* WIP: k256 in keygen round 1

* WIP experimenting with k256

* WIP more experimenting

* add k256_serde module

* use serde-capable AffinePoint in keygen round 2

* add paillier wrapper for k256

* k256 keygen round 2

* vss_k256 to ProjectivePoint from AffinePoint

* WIP misc utils

* better design for vss_k256

* rename local paillier module, begin round 3

* tidy paillier_k256

* convert paillier plaintext to k256::Scalar, progress on round 3

* paillier keygen, finish keygen round 3

* serde for k256::Scalar, keygen round 4

* vss shares now have an index

* vss secret recovery with tests

* split commits from vss

* keygen done, test pass

* derive Debug vor Vss, r1::State

* tidy Commit struct

* make Point local to recover_secret

* add lagrange_coefficient

* rename keygen fields

* begin sign r1

* sign r1: rename vars, begin k256

* new dir paillier_k256

* helpers for curve order const

* port src/zkp/paillier/mod.rs -> src/paillier_k256/zk/mod.rs

* port src/zkp/paillier/mod.rs -> src/paillier_k256/zk/mod.rs

* remove direct dependence on paillier from paillier_k256/zk/mod.rs

* port zkp paillier zk range proof to k256

* add k256 versions of dk, all_eks, all_zkps to SecretKeyShare

* sign r1

* rename vars

* sign r2 verify zkp

* add mta port to k256

* paillier_k256: move stand-alone functions to methods

* less verbose conversion k256::Scalar -> Plaintext

* add mta protocol for k256

* add mta_response_with_proof_wc

* sign r2

* begin sign r3

* sign r3 mta_wc proof

* sign r3 compute delta_i, sigma_i

* add pedersen_k256 module

* finish sign r3, rename a bunch of fields

* sign r4 rename a bunch of fields

* sign r4, plus malicious

* sign r5 rename a bunch of fields

* sign r5 malicious

* sign r5 done

* sign r6 malicious

* sign r6 check for type 5 faults, but n

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,19 @@ crate-type = ["lib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.2.1"
-k256 = { version = "0", features = ["ecdsa"] }
-multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa", tag = "v0.4.3" } # for utilities::mta
+
+# k256 baggage
+k256 = "0.8"
+rand = "0.8"
+sha2 = "0.9"
+ecdsa = "0.11" # needed only for FromDigest trait
 
 # logging
 log = "0.4"
 tracing = "0.1"
 
-# baggage from multi-party-ecdsa
-curv = { git = "https://github.com/KZen-networks/curv", tag = "v0.2.6", features = ["ec_secp256k1"] }
-paillier = { git = "https://github.com/KZen-networks/rust-paillier", tag = "v0.3.4"}
-zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier", tag = "v0.2.9"}
+# TODO need a better Paillier library
+paillier = { git = "https://github.com/axelarnetwork/rust-paillier"} 
 
 # iterate enums
 strum = "0.20"
@@ -28,8 +30,7 @@ strum_macros = "0.20"
 
 [dev-dependencies]
 lazy_static = "1.4"
-# enable logging for tests
-tracing-test = "0.1.0"
+tracing-test = "0.1.0" # enable logging for tests
 
 [features]
 malicious = []
