accommodate rng API in rust-paillier

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ log = "0.4"
 tracing = "0.1"
 
 # TODO need a better Paillier library
-paillier = { git = "https://github.com/axelarnetwork/rust-paillier"} 
+paillier = { git = "https://github.com/axelarnetwork/rust-paillier", branch = "rng"}
 
 # iterate enums
 strum = "0.20"
