--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ crate-type = ["lib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.2.1"
+rand_chacha = "0"
+hmac = "0"
 
 # k256 baggage
 k256 = "0"
