--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ log = "0.4"
 tracing = "0.1"
 
 # TODO need a better Paillier library
-paillier = { git = "https://github.com/axelarnetwork/rust-paillier", branch = "rng"}
+paillier = { git = "https://github.com/axelarnetwork/rust-paillier"}
 
 # iterate enums
 strum = "0.20"
