feat(prf)!: keygen Paillier keys from user-supplied PRF key, input (#79)
* accommodate rng API in rust-paillier

* update dependencies: k256, rand, sha2, ecdsa

* use hmac-sha256 as prf, chacha20 as rng

* keygen::new take key, input args for PRF

* validate prf_input length, add repeatable_pallier test, general tidying

* point to rust-paillier master

* clippy appeasement, add all-features, tests to github lint workflow

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,19 +10,21 @@ crate-type = ["lib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.2.1"
+rand_chacha = "0"
+hmac = "0"
 
 # k256 baggage
-k256 = "0.8"
-rand = "0.8"
-sha2 = "0.9"
-ecdsa = "0.11" # needed only for FromDigest trait
+k256 = "0"
+rand = "0"
+sha2 = "0"
+ecdsa = "0" # needed only for FromDigest trait
 
 # logging
 log = "0.4"
 tracing = "0.1"
 
 # TODO need a better Paillier library
-paillier = { git = "https://github.com/axelarnetwork/rust-paillier"} 
+paillier = { git = "https://github.com/axelarnetwork/rust-paillier"}
 
 # iterate enums
 strum = "0.20"
