--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -26,4 +26,10 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --all-features --tests -- -D warnings
+          args: --all-targets -- -D warnings
+
+      - name: Run cargo clippy with all features
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --all-features --all-targets -- -D warnings
