--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,19 +21,14 @@ rand = "0"
 sha2 = { version = "0", features = ["std", "asm"], default-features = false }
 
 # logging
-log = "0.4"
-# tracing = "0"
 tracing = {version = "0", default-features = false}
 
 # TODO need a better Paillier library
 paillier = { git = "https://github.com/axelarnetwork/rust-paillier"}
 
 [dev-dependencies]
-lazy_static = "1.4"
 tracing-test = "0" # enable logging for tests
-# tracing-subscriber = "0"
-tracing-subscriber = {version = "0", default-features = false, features = ["env-filter", "fmt"]}
-# test-env-log = {version = "0", default-features = false, features = ["trace"]}
+tracing-subscriber = { version = "0", features = ["env-filter", "fmt"], default-features = false }
 
 # Don't abort in case there is a panic to clean up data
 [profile.dev]
