--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ zeroize = { version = "1.4", features = ["zeroize_derive"] }
 k256 = { version = "0", features = ["ecdsa", "zeroize"], default-features = false }
 ecdsa = { version = "0", features = ["digest"], default-features = false } # needed only for FromDigest trait
 rand = "0"
-sha2 = { version = "0", features = ["std", "asm"], default-features = false }
+sha2 = { version = "0", features = ["std"], default-features = false }
 
 # logging
 tracing = {version = "0", default-features = false}
