--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "tofn"
 version = "0.1.0"
 authors = ["Gus Gutoski <gus@axelar.network>", "Milap Sheth <milap@axelar.network>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [lib]
 crate-type = ["lib"]
