debugging serialization secret key share

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tofn"
 version = "0.1.0"
-authors = ["Gus Gutoski <gus@axelar.network>", "Milap Sheth <milap@axelar.network>"]
+authors = ["Gus Gutoski <gus@axelar.network>", "Milap Sheth <milap@axelar.network>", "Thor Kamphefner <thor@entropy.xyz>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 
