--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ hmac = "0.11"
 zeroize = { version = "1.4", features = ["zeroize_derive"] }
 
 # k256 baggage
-k256 = { version = "0.9", features = ["ecdsa", "zeroize"], default-features = false }
-ecdsa = { version = "0.12", features = ["digest"], default-features = false } # needed only for FromDigest trait
+elliptic-curve = {version = "0.11.12", features = ["arithmetic"]}
+k256 = { version = "0.10.4", features = ["ecdsa", "ecdsa-core", "serde"]}
+ecdsa = { version = "0.13.4", features = ["digest", "arithmetic", "hazmat"]} # needed only for FromDigest trait
 rand = "0.8"
 sha2 = { version = "0.9", features = ["std", "asm"], default-features = false }
 sha3 = { version = "0.9", default-features = false }
