--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ hmac = "0.12.1"
 zeroize = { version = "1.4", features = ["zeroize_derive"] }
 
 # k256 baggage
-k256 = { version = "0.10.4", features = ["ecdsa", "ecdsa-core", "serde"]}
-ecdsa = { version = "0.13.4", features = ["digest", "arithmetic", "hazmat"]} # needed only for FromDigest trait
+k256 = "0.10.4"
+ecdsa = "0.13.4"
 rand = "0.8"
 sha2 = { version = "0.10.2", features = ["std", "asm"], default-features = false }
 sha3 = { version = "0.10.1", default-features = false }
