--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ zeroize = { version = "1.4", features = ["zeroize_derive"] }
 # k256 baggage
 k256 = { version = "0.9", features = ["ecdsa", "zeroize"], default-features = false }
 ecdsa = { version = "0.12", features = ["digest"], default-features = false } # needed only for FromDigest trait
+ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", tag = "2.0.0-rc.3", features = ["alloc", "digest", "rand_core"], default_features = false }
 rand = "0.8"
 sha2 = { version = "0.9", features = ["std", "asm"], default-features = false }
 sha3 = { version = "0.9", default-features = false }
