add basic ed25519 keygen, signing and verification support (#207)
* add basic ed25519 keygen, signing and verification support

* return signature as ASN1 DER encoded bytes

* reduce dependencies

* use new release of ed25519-dalek

* enable zeroize feature

* rename rng_seed_ecdsa_signing_key to rng_seed_signing_key since it is not ecdsa-specific

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,10 @@ zeroize = { version = "1.4", features = ["zeroize_derive"] }
 
 # k256 baggage
 k256 = { version = "0.9", features = ["ecdsa", "zeroize"], default-features = false }
+der = { version = "0.7", features = ["alloc", "derive", "oid"] }
 ecdsa = { version = "0.12", features = ["digest"], default-features = false } # needed only for FromDigest trait
+ed25519 = { version = ">=2.2, <2.3", features = ["pkcs8"], default-features = false }
+ed25519-dalek = { version = "2.0", features = ["alloc", "digest", "rand_core", "zeroize"], default_features = false }
 rand = "0.8"
 sha2 = { version = "0.9", features = ["std", "asm"], default-features = false }
 sha3 = { version = "0.9", default-features = false }
