--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "tofn"
 version = "0.1.0"
-authors = ["Gus Gutoski <gus@axelar.network>", "Milap Sheth <milap@axelar.network>"]
+authors = [
+    "Gus Gutoski <gus@axelar.network>",
+    "Milap Sheth <milap@axelar.network>",
+]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 
@@ -16,23 +19,40 @@ hmac = "0.11"
 zeroize = { version = "1.4", features = ["zeroize_derive"] }
 
 # k256 baggage
-k256 = { version = "0.9", features = ["ecdsa", "zeroize"], default-features = false }
+k256 = { version = "0.9", features = [
+    "ecdsa",
+    "zeroize",
+], default-features = false }
 der = { version = "0.7", features = ["alloc", "derive", "oid"] }
-ecdsa = { version = "0.12", features = ["digest"], default-features = false } # needed only for FromDigest trait
-ed25519 = { version = ">=2.2, <2.3", features = ["pkcs8"], default-features = false }
-ed25519-dalek = { version = "2.0", features = ["alloc", "digest", "rand_core", "zeroize"], default_features = false }
+ecdsa = { version = "0.12", features = [
+    "digest",
+], default-features = false } # needed only for FromDigest trait
+ed25519 = { version = ">=2.2, <2.3", features = [
+    "pkcs8",
+], default-features = false }
+ed25519-dalek = { version = "2.0", features = [
+    "alloc",
+    "digest",
+    "rand_core",
+    "zeroize",
+], default_features = false }
 rand = "0.8"
 sha2 = { version = "0.9", features = ["std", "asm"], default-features = false }
 sha3 = { version = "0.9", default-features = false }
 
 # logging
-tracing = {version = "0.1", default-features = false}
+tracing = { version = "0.1", default-features = false }
 
-libpaillier = { git = "https://github.com/axelarnetwork/paillier-rs", features = ["gmp"], default-features = false }
+libpaillier = { git = "https://github.com/axelarnetwork/paillier-rs", features = [
+    "gmp",
+], default-features = false }
 
 [dev-dependencies]
 tracing-test = "0" # enable logging for tests
-tracing-subscriber = { version = "0", features = ["env-filter", "fmt"], default-features = false }
+tracing-subscriber = { version = "0", features = [
+    "env-filter",
+    "fmt",
+], default-features = false }
 criterion = "0.3"
 
 [[bench]]
@@ -47,4 +67,9 @@ panic = "unwind"
 panic = "unwind"
 
 [features]
-malicious = []
+default = ["secp256k1", "ed25519"]
+secp256k1 = []
+ed25519 = []
+threshold = ["secp256k1"]
+gg20 = ["threshold"]
+malicious = ["gg20"]
