--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,30 +15,40 @@ crate-type = ["lib"]
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3.3"
 rand_chacha = "0.3"
-hmac = "0.11"
-zeroize = { version = "1.4", features = ["zeroize_derive"] }
-
-# k256 baggage
-k256 = { version = "0.9", features = [
-    "ecdsa",
-    "zeroize",
+hmac = "0.12"
+zeroize = { version = "1.6", features = ["zeroize_derive"] }
+rand = "0.8"
+sha2 = { version = "0.10.7", features = [
+    "std",
+    "asm",
 ], default-features = false }
-der = { version = "0.7", features = ["alloc", "derive", "oid"] }
-ecdsa = { version = "0.12", features = [
+
+# Ecdsa deps
+k256 = { version = "0.13", features = [
+    "ecdsa",
+], default-features = false, optional = true }
+ecdsa = { version = "0.16", features = [
     "digest",
-], default-features = false } # needed only for FromDigest trait
+], default-features = false, optional = true } # needed only for FromDigest trait
+crypto-bigint = { version = "0.5", default-features = false, optional = true }
+
+# Ed25519 deps
+der = { version = "0.7", features = [
+    "alloc",
+    "derive",
+    "oid",
+], optional = true }
 ed25519 = { version = ">=2.2, <2.3", features = [
     "pkcs8",
-], default-features = false }
+], default-features = false, optional = true }
 ed25519-dalek = { version = "2.0", features = [
+    "std",
     "alloc",
     "digest",
     "rand_core",
     "zeroize",
-], default_features = false }
-rand = "0.8"
-sha2 = { version = "0.9", features = ["std", "asm"], default-features = false }
-sha3 = { version = "0.9", default-features = false }
+    "asm",
+], default_features = false, optional = true }
 
 # logging
 tracing = { version = "0.1", default-features = false }
@@ -59,5 +69,5 @@ panic = "unwind"
 
 [features]
 default = ["secp256k1", "ed25519"]
-secp256k1 = []
-ed25519 = []
+secp256k1 = ["dep:ecdsa", "dep:k256", "dep:crypto-bigint"]
+ed25519 = ["dep:ed25519", "dep:ed25519-dalek", "dep:der"]
