--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -18,15 +18,9 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: 1.78.0
           override: true
           components: rustfmt, clippy
-
-      - name: Run cargo clippy
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --all-targets -- -D warnings
 
       - name: Run cargo clippy with all features
         uses: actions-rs/cargo@v1
