--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3.3"
 rand_chacha = "0.3"
 hmac = "0.12"
-zeroize = { version = "1.6", features = ["zeroize_derive"] }
+zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
 rand = "0.8"
-sha2 = { version = "0.10.7", features = [
+sha2 = { version = "0.10.8", features = [
     "std",
     "asm",
 ], default-features = false }
@@ -39,10 +39,10 @@ der = { version = "0.7", features = [
     "derive",
     "oid",
 ], optional = true }
-ed25519 = { version = ">=2.2, <2.3", features = [
+ed25519 = { version = "2.2", features = [
     "pkcs8",
 ], default-features = false, optional = true }
-ed25519-dalek = { version = "2.0", features = [
+ed25519-dalek = { version = "2.1", features = [
     "std",
     "alloc",
     "digest",
@@ -55,8 +55,8 @@ ed25519-dalek = { version = "2.0", features = [
 tracing = { version = "0.1", default-features = false }
 
 [dev-dependencies]
-tracing-test = "0" # enable logging for tests
-tracing-subscriber = { version = "0", features = [
+tracing-test = "0.2" # enable logging for tests
+tracing-subscriber = { version = "0.3", features = [
     "env-filter",
     "fmt",
 ], default-features = false }
