--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tofn"
 version = "1.0.0"
 authors = [
-    "Axelar Eng <eng@interoplabs.io>",
+    "Interoplabs Eng <eng@interoplabs.io>",
 ]
 edition = "2021"
 license = "MIT OR Apache-2.0"
